# Cubik_8x8x8

./: Cubik_8x8x8.pdsprj.DESKTOP-VORN4GC.hoang.workspace
Hardware_Design/: Cubik_8x8x8.pdsprj
Project Backups/: Cubik_8x8x8 [20251208, 20-50-51].pdsprj  Cubik_8x8x8 [20251208, 21-14-55].pdsprj  Cubik_8x8x8 [20251208, 21-14-59].pdsprj  Cubik_8x8x8 [20251208, 21-30-55].pdsprj  Cubik_8x8x8 [Autosaved].pdsprj
Source_Code/ESP32/Include/: WebServer.h  Wifi.h
Source_Code/ESP32/Source/: sdkconfig
Source_Code/ESP32/Source/main/: main.c
Source_Code/ESP32/main/: Admin.html  CMakeLists.txt  WebServer.c  Wifi.c  main.c  test.html
Source_Code/Tools/: Metadata_Generator.py
Source_Code/Tools/Key/: private.pem  public.pem
Source_Code/Tools/OpenSSL-Win64/: how_to_run.txt
Source_Code/Web/Cubik_8x8x8_Admin/: .htaccess
Source_Code/Web/Cubik_8x8x8_Admin/Back_end/: CheckUpdate.php  Database.php  Login.php  Logout.php  ProductCycle.php  Router.php  Upload.php
Source_Code/Web/Cubik_8x8x8_Admin/Front_end/CSS/: Index.css  Login.css
Source_Code/Web/Cubik_8x8x8_Admin/Front_end/HTML/: Index.html  Login.html  Login.php
Source_Code/Web/Cubik_8x8x8_Admin/Front_end/JavaScript/: Index.js  Login.js
System_Design/: .$SRS_FOTA_sequence_diagram.drawio.bkp  .$SRS_FOTA_statemachine.drawio.bkp  SRS_ESP32_FOTA.drawio  SRS_ESP32_STM32_Bootloader.pptx  SRS_ESP32_wifi_config_diagram.drawio  SRS_FOTA_sequence_diagram.drawio  SRS_FOTA_statemachine.drawio  ~$SRS_ESP32_STM32_Bootloader.pptx
